crates/keron-lang/tests/corpus/errors/check/nullable_in_interpolation.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: cannot interpolate a `String?` directly; `match` it to extract the inhabitant first
  --> 2:33
  |
2 | val greeting: String = "hello ${maybe_name}"
  |                                 ^^^^^^^^^^
